Reset Password Activity working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,6 +155,9 @@
     <string name="band_image">Band Image</string>
     <string name="please_wait_while_we_are_updating_your_band_image">Please wait, while we are updating your band image</string>
     <string name="search_for_musicians_for_your_band">Search for musicians for your band</string>
+    <string name="we_will_email_you_a_link_to_reset_your_password">We will email you a link to reset your password</string>
+    <string name="reset_password_email">Reset Password Email</string>
+    <string name="please_check_your_email_account">Please, check your email account</string>
 
     <array name="instruments">
         <item>Bass</item>
