--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
     <string name="enter_message">Enter message</string>
     <string name="message_sent_succesfully">Message Sent Successfully</string>
     <string name="events">Events</string>
+    <string name="user_profile">User profile</string>
 
     <array name="instruments">
         <item>Bass</item>
