--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,6 +178,8 @@
     <string name="my_bands">My Bands</string>
     <string name="you_need_to_belong_to_a_band">You need to belong to a band</string>
     <string name="band_does_not_exist">Band does not exist</string>
+    <string name="select_a_band">Select a band</string>
+    <string name="please_select_a_band">Please, select a band before starting</string>
 
     <array name="instruments">
         <item>Bass</item>
