--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,8 @@
     <string name="band_does_not_exist">Band does not exist</string>
     <string name="select_a_band">Select a band</string>
     <string name="please_select_a_band">Please, select a band before starting</string>
+    <string name="you_are_getting_an_invitation_from_the_following_band">You are getting an invitation from the following band:</string>
+    <string name="contact_information">Contact information:</string>
 
     <array name="instruments">
         <item>Bass</item>
