--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,6 +217,7 @@
     <string name="search_for_songs">Search for songs</string>
     <string name="song_updated_successfully">Song updated successfully</string>
     <string name="update_song">Update Song</string>
+    <string name="please_enter_profile_image">Please, enter profile image</string>
 
     <array name="instruments">
         <item>Bass</item>
