--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,6 +237,12 @@
     <string name="enter_a_name_for_your_event">Enter a name for your event</string>
     <string name="select_playlist">Select playlist</string>
     <string name="select_a_playlist">Select a playlist</string>
+    <string name="please_select_a_video">Please, select a video</string>
+    <string name="song_update">Song Update</string>
+    <string name="please_wait_while_we_are_updating_your_song">Please, wait while we are updating your song</string>
+    <string name="ok">Ok</string>
+    <string name="please_enter_a_playlist_name">Please, enter a playlist name</string>
+    <string name="cancel">Cancel</string>
 
     <array name="instruments">
         <item>Bass</item>
