--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,6 +243,8 @@
     <string name="ok">Ok</string>
     <string name="please_enter_a_playlist_name">Please, enter a playlist name</string>
     <string name="cancel">Cancel</string>
+    <string name="playlist_deleted">Playlist deleted</string>
+    <string name="add_song_to_playlist">Add song to playlist</string>
 
     <array name="instruments">
         <item>Bass</item>
@@ -576,4 +578,7 @@
         <item>Xylophone</item>
         <item>Zither</item>
     </array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
