--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -619,4 +619,6 @@
     <string name="please_update_date_too">Please, update date too!</string>
     <string name="event_deleted_successfully">Event deleted successfully</string>
     <string name="title_activity_maps">Map</string>
+    <string name="please_wait">Please, wait ...</string>
+    <string name="maps_googleapis">https://maps.googleapis.com/maps/api/geocode/json?address=%s</string>
 </resources>
