--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -631,4 +631,5 @@
     <string name="account_setup">Account Setup</string>
     <string name="click_band_to_start">Click band to start</string>
     <string name="please_click_search_view_to_start">Please, click search to start</string>
+    <string name="login_message">Create a band or wait for an invitation</string>
 </resources>
